Update caching logic, fix minor issues